# CardiacAI

./: .gitmodules  README.md  default  test.html
backend/: .env  .envrc  .gitignore  bugs.md  nginx.conf  pyproject.toml  run.sh  setup.sh
backend/app/: main.py
backend/app/src/config/: __init__.py
backend/app/src/data/: __init__.py  devices.py  reading.py
backend/app/src/models/: device.py  reading.py  token.py
backend/app/src/service/: auth.py  device_service.py  readings_service.py
backend/app/src/utils/: plot.py  security.py
backend/app/src/web/: __init__.py  auth.py  machine.py  reading.py  websocket.py
backend/conf/: auto_startup_file  nginx_conf_file
backend/tests/: mocked_device.py  mocked_frontend.html
firmware/ecg_firmware/: platformio.ini
firmware/ecg_firmware/include/: AD8232_ECG.h  ECGFilter.h  ECGWebSocket.h  HotspotWebServer.h  PeripheralHandler.h  WirelessCommunication.h
firmware/ecg_firmware/src/: AD8232_ECG.cpp  ECGWebSocket.cpp  HotspotWebServer.cpp  PeripheralHandler.cpp  WirelessCommunication.cpp  main.cpp  tmp.txt
firmware/ecg_machine/: ecg_machine.ino  index.html  main.h  network.h
frontend/cardiac-ai/: .env  package-lock.json  package.json
frontend/cardiac-ai/public/: index.html  mocked_frontend.html
frontend/cardiac-ai/src/: App.tsx  index.tsx  layout.tsx  reportWebVitals.ts
frontend/cardiac-ai/src/components/: header.tsx
frontend/cardiac-ai/src/context/: AuthProvider.tsx
frontend/cardiac-ai/src/pages/about/: index.tsx
frontend/cardiac-ai/src/pages/analysis/: index.tsx
frontend/cardiac-ai/src/pages/authentication/: login.tsx
frontend/cardiac-ai/src/routes/: AuthGuard.tsx  baseRoutes.tsx
frontend/cardiac-ai/src/services/: auth.ts  readings.ts
(+1 files in other folders)
