[tool.poetry]
name = "4evabraids-backend"
version = "0.1.0"
description = "The backend server for the 4evabraids backend service"
authors = [
    "Nwofia Victory Chibuike <victorychibuike111@gmail.com",
    "Ibeh Esther <ibehesther@gmail.com",
]
package-mode = false
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = { extras = ["standard"], version = "^0.115.6" }
motor = "^3.6.0"
pydantic-mongo = "^2.3.0"
bcrypt = "^4.2.1"
pytest = "^8.3.4"
pyjwt = "^2.10.1"
passlib = { extras = ["bcrypt"], version = "^1.7.4" }
matplotlib = "^3.10.3"

[tool.poetry.group.dev.dependencies]
faker = "^33.1.0"
pytest-asyncio = "^0.25.0"
black = "^24.10.0"
flake8 = "^7.0.0"          # Replacing pep8
isort = "^5.13.2"
pytest-cov = "^6.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 80
target-version = ["py312"]
include = '\.pyi?$'
extend-exclude = '''
# A regex preceded with ^/ will apply only to files and directories
# in the root of the project.
^/foo.py  # exclude a file named foo.py in the root of the project
'''

[tool.flake8]
max-line-length = 80
extend-ignore = ["E203"]
exclude = [
    ".git",
    "__pycache__",
    "build",
    "dist",
    "*.egg-info",
    ".eggs",
    ".tox",
    ".venv",
    "venv",
]
per-file-ignores = [
    "__init__.py:F401", # ignore unused imports in __init__ files
]

[tool.isort]
profile = "black"
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
line_length = 80

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "session"